--- a/invitacion-carlosykelly.html
+++ b/invitacion-carlosykelly.html
@@ -260,7 +260,7 @@
         <hr style="width: 50%; margin: 0 auto;">
            <span style="font-family: montserrat">
             <b>
-                VÁLIDO PARA 1 INVITADO
+                VÁLIDO PARA 2 INVITADOS
             </b>
         </span>
         <hr style="width: 50%; margin: 0 auto;">
@@ -346,7 +346,7 @@
         } 
     </script>
 
-    
+
 
 
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
