--- a/invitacion-carlosykelly.html
+++ b/invitacion-carlosykelly.html
@@ -150,7 +150,10 @@
             <div data-aos="fade" data-aos-offset="300" data-aos-delay="0" style="margin-bottom: 130px">
                 <div style="width: 45%; float: left; padding-top: 50px; padding-left: 20%;">
                     <span style="font-size: 23px; font-family: montserrat; text-transform: uppercase">
-                        16 Dic 2023
+                        16 Dic
+                    </span>
+                    <span style="font-size: 16px"> 
+                        2023 
                     </span>
                 </div>
                 <div data-aos="fade" data-aos-offset="300" data-aos-delay="0" style="width: 10%; float: left;">
@@ -170,7 +173,7 @@
 
         <div aling ='center' data-aos="fade" data-aos-offset="300" data-aos-delay="0" class="container text-center letra9">
             <div data-aos="fade" data-aos-offset="300" data-aos-delay="0" class="container text-center letra9">
-                <p class="letra9">Lugar:<br> Nalu's Garden<br>Km 32.5 circunvalación del lago de Amatitlán,<br>Amatitlán, Guatemala</p>
+                <p class="letra9">Lugar:<br>Nalu's Garden<br>Km 32.5 circunvalación del lago de Amatitlán,<br>Amatitlán, Guatemala</p>
             </div>
         </div>
 
@@ -260,7 +263,7 @@
         <hr style="width: 50%; margin: 0 auto;">
            <span style="font-family: montserrat">
             <b>
-                VÁLIDO PARA 1 INVITADO
+                VÁLIDO PARA 3 INVITADOS
             </b>
         </span>
         <hr style="width: 50%; margin: 0 auto;">
