--- a/invitacion-carlosykelly.html
+++ b/invitacion-carlosykelly.html
@@ -263,7 +263,7 @@
         <hr style="width: 50%; margin: 0 auto;">
            <span style="font-family: montserrat">
             <b>
-                VÁLIDO PARA 3 INVITADOS
+                VÁLIDO PARA 1 INVITADO
             </b>
         </span>
         <hr style="width: 50%; margin: 0 auto;">
