Update invitacion-carlosykelly.html line 155

--- a/invitacion-carlosykelly.html
+++ b/invitacion-carlosykelly.html
@@ -152,7 +152,7 @@
                     <span style="font-size: 23px; font-family: montserrat; text-transform: uppercase">
                         16 Dic
                     </span>
-                    <span style="font-size: 23px"> 
+                    <span style="font-size: 23px; font-family: montserrat; text-transform: uppercase"> 
                         2023 
                     </span>
                 </div>
