--- a/invitacion-carlosykelly.html
+++ b/invitacion-carlosykelly.html
@@ -81,7 +81,7 @@
 
             
         <div data-aos="fade" data-aos-offset="300" data-aos-delay="0" class="container-fluid text-center mt-5 p-3">
-            <h1>¡Estas Invitado!</h1>
+            <h1>¡Estás Invitado!</h1>
             <div data-aos="fade" data-aos-offset="300" data-aos-delay="0" class="container text-center letra9">
                 <p class="letra9">Nos encantaria que seas parte <br>de este momento tan especial<br>para nosotros. ¡Falta poco!</p>
             </div>
